# al-hadith-dataset

./: .gitignore  .prettierrc  pytest.ini  requirements.txt  setup.cfg
data/bukhari/: ayat.csv  ayat_thaskeel.csv  chapters_thaskeel.csv  main_subject.csv  main_subject_thaskeel.csv  narrators.csv  narrators_thaskeel.csv  tree_subj.csv
scraping/: __init__.py
scraping/classes/: __init__.py  tar_archiver.py
scraping/data_extraction_tags/: __init__.py  get_author.py  get_chapters_tree.py  get_hadith_base_info.py  get_hadith_info.py  get_hadith_info_thaskeel.py  get_hadith_narrators.py  get_narrator_data_from_tags.py  get_page_navigation.py  get_page_volume.py  get_tkhreg_hadith_api.py  get_toc_path.py  handle_chapter_footer_tags.py  json_normalize_tkhreg_hadith_response.py
scraping/data_proccessing/: __init__.py  bytes_to_human_readable.py  clean_html.py  clean_text.py  divide_pages_into_parts.py  extract_ayat_info.py  extract_number_before_haddathana.py  extract_text_from_html.py  find_common_columns.py  get_h_wa_haddathana_count_occurrences.py  get_narrators_chain_id.py  get_number_id.py  get_text_id.py  get_url_components.py  normalize_arabic_text.py  parse_query_params.py  remove_diacritics_and_spaces.py  remove_diacritics_spaces_and_normalize_numbers.py
scraping/handles_files/: __init__.py  convert_to_serializable.py  get_matching_dict.py  is_files_saved.py  load_data_as_dict.py  read_html_files.py  save_data_from_dict.py  save_html_files.py  to_csv_pd.py  to_html_append.py  to_json_csv.py  to_json_with_arabic.py  update_ayat.py  update_chapters.py  (+6 more)
(+19 files in other folders)
