[metadata]
name = al_hadith_dataset
version = 0.1.0
description = Gathering The Hadith of the Prophet Muhammad (صلى الله عليه و سلم) From website to be used For AI models
author = m.lotfi
author_email = your.email@example.com
url = https://github.com/yourusername/al-hadith-dataset
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = scraping
install_requires =
    requests
    beautifulsoup4
    pandas
    selenium
    webdriver-manager
    pymongo
    nltk 
    spacy 
    networkx
    aiohttp

python_requires = >=3.6

[options.extras_require]
dev =
    pytest
    coverage
    pytest-cov